crates/formatter/tests/snapshots/snapshots__migrations__000222_template_organization_name.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Update the template_with_users view by recreating it.
drop view template_with_users;

-- Renaming template_with_users -> template_with_names
create view template_with_names as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username,
	coalesce(organizations.name, '') as organization_name
from
	templates
	left join visible_users on templates.created_by = visible_users.id
	left join organizations on templates.organization_id = organizations.id;

comment on view template_with_names is 'Joins in the display name information such as username, avatar, and organization name.';
