crates/formatter/tests/snapshots/snapshots__migrations__000223_notifications_settings_audit.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- This has to be outside a transaction
alter type resource_type add value if not exists 'notifications_settings';
