crates/formatter/tests/snapshots/snapshots__migrations__000226_notifications_autobuild_failed.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from notification_templates
where id = '381df2a9-c0c0-4749-420f-80a9280c66f9';
