crates/formatter/tests/snapshots/snapshots__migrations__000230_notifications_fix_username.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	actions = REPLACE(
		actions::text,
		'@{{.UserUsername}}',
		'@{{.UserName}}'
	)::jsonb;
